RESOLVED FIXED259402
REGRESSION(264990@main) some occlusion regions are incorrect
https://bugs.webkit.org/show_bug.cgi?id=259402
Summary REGRESSION(264990@main) some occlusion regions are incorrect
Etienne
Reported 2023-07-21 11:01:52 PDT
REGRESSION(264990@main) some occlusion regions are incorrect
Attachments
Etienne
Comment 1 2023-07-21 11:14:22 PDT
Etienne
Comment 2 2023-07-21 11:14:43 PDT
EWS
Comment 3 2023-07-22 03:38:40 PDT
Committed 266227@main (c73297d43882): <https://commits.webkit.org/266227@main> Reviewed commits have been landed. Closing PR #15991 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.