Cherry-pick c73297d43882. rdar://problem/113602778

REGRESSION(264990@main) some occlusion regions are incorrect
    https://bugs.webkit.org/show_bug.cgi?id=259402
    <rdar://112668310>

    Reviewed by Tim Horton.

    We already only looked at ancestors with the same absolute content box
    during the `position: fixed` search. But we also need to make sure we
    won't occlude siblings.

    * Source/WebCore/page/InteractionRegion.cpp:
    (WebCore::isOverlay):
    Update the overlay detection logic.

    * LayoutTests/interaction-region/overlay-expected.txt:
    * LayoutTests/interaction-region/overlay.html:
    Add a test covering the change.

    Canonical link: https://commits.webkit.org/266227@main

Canonical link: https://commits.webkit.org/265870.244@safari-7616-branch